<resources>
    <string name="app_name">Trmond</string>
    <string name="login">Login</string>
    <string name="hint_username">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_id">Enter Diamond id</string>
    <string name="hint_timestamp">Enter Timestamp</string>
    <string name="hint_holder_name">Enter Holder name</string>
    <string name="diamond_add_title">Create Tuna Record</string>
    <string name="create_record">Create</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="no_account">Still without account?</string>
    <string name="create_account"> <u>Create One</u></string>
    <string name="welcome">Hello!</string>
    <string name="fingerprint"><u>Fingerprint</u></string>
    <string name="fingerprint_text_1">You can use your</string>
    <string name="fingerprint_text_2">to grant access to the app</string>


    <!-- Add new record -->
    <string name="add_new_record_hint">Add new record</string>
    <string name="add_new_photos_header">ADD PHOTOS</string>
    <string name="diamond_information">DIAMOND INFORMATION</string>
    <string name="diamond_clarity">Clarity</string>
    <string name="diamond_color">Color</string>
    <string name="diamond_cut">Cut</string>
    <string name="diamond_carat">Carat</string>
    <string name="diamond_id">Id</string>
    <string name="diamond_certification">CHOOSE CERTIFICATION</string>
    <string name="diamond_add_record">Add Record</string>
    <string name="diamond_certification_gia">GIA</string>
    <string name="diamond_certification_igi">IGI</string>
    <string name="diamond_certification_hrd">HRD</string>

    <!-- Change -->
    <string name="transfer_title">Transfer</string>
    <string name="transfer_subtit_title">Change Diamond Ownership</string>
    <string name="diamond_change_holder">Transfer</string>
    <string name="change_holder_success">Change holder name successfully</string>
    <string name="change_holder_error">Please enter valid Diamond id</string>
    <string name="user_placeholder">Hi, John</string>
    <string name="holder_name">Holder Name</string>
    <string name="all_records">All Records</string>
</resources>
