<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    android:background="@drawable/ic_dia_2"
    tools:context="com.globant.akashdanao.hyperledgerdiamond.ui.activities.LoginActivity">

    <RelativeLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_group_padding">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_trmond" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_icon"
            android:paddingLeft="@dimen/form_element_padding"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sub_title"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_header"
        android:paddingBottom="@dimen/form_group_padding"
        >

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="@dimen/title"
            android:textColor="@android:color/black"
            />


        <TextView
            android:id="@+id/tv_fingerprint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_welcome"
            android:text="@string/fingerprint_text_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_welcome"
            android:layout_toRightOf="@+id/tv_fingerprint_text"
            android:text="@string/fingerprint"
            android:paddingLeft="@dimen/form_element_padding"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_fingerprint_text"
            android:text="@string/fingerprint_text_2" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:hint="@string/hint_username"
            android:paddingLeft="@dimen/form_element_padding" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginTop="@dimen/form_element_spacing"
            android:hint="@string/hint_password"
            android:paddingLeft="@dimen/form_element_padding" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/form_group_padding">

            <Button
                android:id="@+id/bt_login"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/button_background"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sub_title" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="@dimen/form_group_padding">

        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/form_element_padding"
            android:text="@string/no_account" />

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/colorCreate" />

    </LinearLayout>
</RelativeLayout>
