<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/default_margin"
    android:layout_marginStart="@dimen/default_margin"
    android:orientation="vertical">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_new_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@android:color/transparent"
        android:hint="@string/add_new_record_hint"
        android:textSize="@dimen/add_new_record_hint_size" />


    <TextView
        android:id="@+id/tv_add_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:text="@string/add_new_photos_header" />

    <ImageView
        android:id="@+id/iv_add_photos"
        android:layout_width="@dimen/add_photo_width"
        android:layout_height="@dimen/add_photo_height"
        android:layout_marginTop="@dimen/default_margin_small"
        android:contentDescription="@null"
        android:src="@drawable/add_photos" />

    <TextView
        android:id="@+id/tv_diamond_info_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:text="@string/diamond_information" />


    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_clarity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:hint="@string/diamond_clarity" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:hint="@string/diamond_color" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_cut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:hint="@string/diamond_cut" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_carat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:hint="@string/diamond_carat" />

    <TextView
        android:id="@+id/tv_certification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/diamond_certification" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/default_margin_small">

        <com.suke.widget.SwitchButton
            android:id="@+id/sb_gia"
            android:layout_width="0dp"
            android:layout_height="@dimen/certification_button_height"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/default_margin_small"
            android:layout_marginStart="@dimen/default_margin_small"/>

        <com.suke.widget.SwitchButton
            android:id="@+id/sb_igi"
            android:layout_width="0dp"
            android:layout_height="@dimen/certification_button_height"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/default_margin_small"
            android:layout_marginStart="@dimen/default_margin_small"/>

        <com.suke.widget.SwitchButton
            android:id="@+id/sb_hrd"
            android:layout_width="0dp"
            android:layout_height="@dimen/certification_button_height"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/default_margin_small"
            android:layout_marginStart="@dimen/default_margin_small"/>

    </LinearLayout>

    <Button
        android:layout_width="@dimen/button_record_add_width"
        android:layout_height="@dimen/button_record_add_height"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_add_record_rounded"
        android:text="@string/diamond_add_record"
        android:layout_marginTop="@dimen/default_margin"/>


</LinearLayout>